# clontech

./: README.md
clontech/clontech-portal/: .gitattributes  .gitignore  Jenkinsfile  MANIFEST.in  README.md  babel.config.js  fabfile.py  fabfile_custom.py  manage.py  package-lock.json  package.json  requirements.txt  setup.cfg  setup.py  test.sh  tox.ini
clontech/clontech-portal/ndx_auth/: README.md  __init__.py  admin.py  apps.py  backends.py  mixins.py  permissions.py  signals.py  urls.py  utils.py  validators.py
clontech/clontech-portal/ndx_auth/forms/: __init__.py  mixins.py  ndx_user.py
clontech/clontech-portal/ndx_auth/migrations/: 0001_initial.py  0002_userprofile.py  0003_auto_20180509_0547.py  0004_auto_20180510_1150.py  0004_auto_20180514_0910.py  0005_auto_20180517_1035.py  0009_auto_20180520_0400.py  0010_auto_20180520_1132.py  0011_auto_20180520_1155.py  0012_auto_20180606_1036.py  0013_auto_20180613_0518.py  0014_auto_20180628_1233.py  0015_userprofile_eula_accepted.py  0016_auto_20181127_1615.py  0017_auto_20190617_0835.py  0018_auto_20190829_1451.py  0019_ndxuser_feedback_emails.py  (+2 more)
clontech/clontech-portal/ndx_batch/: README.md  __init__.py  admin.py  api_urls.py  api_views.py  apps.py  data_matrix.py  forms.py  models.py  pagination.py  serializers.py  signals.py  tasks.py  urls.py  views.py
clontech/clontech-portal/ndx_eula/: README.md  __init__.py  admin.py  api_urls.py  api_views.py  apps.py  forms.py  serializers.py  urls.py  views.py
clontech/clontech-portal/ndx_feedback/: README.md  __init__.py  admin.py  api_urls.py  api_views.py  apps.py  serializers.py  signals.py  tasks.py  urls.py  views.py
clontech/clontech-portal/ndx_mpaf/: api_urls.py  api_views.py
clontech/clontech-portal/ndx_portal/: __init__.py  apps.py  celery.py  context_processors.py  decorators.py  fix_group_names.py  migration_utils.py  setup.py  signals.py  urls.py  utils.py  wsgi.py
clontech/clontech-portal/ndx_result/: README.md  __init__.py  admin.py  api_urls.py  api_views.py  apps.py  csv_generators.py  tasks.py  urls.py  views.py
clontech/clontech-portal/settings/: portal_env_vars.py  portal_settings.py  test_overrides.py
(+186 files in other folders)
