[metadata]
name = ndx357_clontech_portal
version = 2.0.7
description = Clontech Portal
long_description = file: README.md

[options]
packages = find:
install_requires =
    Django<1.12
    django-celery-email<2.1
    django-debug-toolbar==2.0
    django-debug-toolbar-template-profiler==1.0.2
    django-extensions<2.2
    django-extra-views<0.13
    django-oauth-toolkit<1.2  # 1.2 requires Django 2
    django-pipeline<2
    django-tz-detect<0.3
    djangorestframework<4
    djangorestframework-camel-case<0.3
    djangorestframework-csv<3
    arrow<0.13
    envdir
    faker
    freezegun
    pytz
    pyStrich<0.9
    raven<7
    unittest-xml-reporting
    WeasyPrint<=0.43
    ndx-audit-log~=2.2.0
    ndx-app-versions~=5.5.12
    ndx-auth-source~=5.5.12
    ndx-django-utils~=5.5.12
    ndx-location~=5.5.12
    ndx-mobile-device-support~=5.5.12
    ndx-mpaf-source~=5.5.12
    ndx-organisation~=5.5.12
    ndx-portal-source~=5.5.12
    ndx-result-source~=5.5.12
    Novarum-Textutils>=2
python_requires = >=3.5
dependency_links =
    https://ndx:webapps@pypi.novarumcloud.com/simple/ndx-audit-log/
    https://ndx:webapps@pypi.novarumcloud.com/simple/ndx-app-versions/
    https://ndx:webapps@pypi.novarumcloud.com/simple/ndx-auth-source/
    https://ndx:webapps@pypi.novarumcloud.com/simple/ndx-django-utils/
    https://ndx:webapps@pypi.novarumcloud.com/simple/ndx-location/
    https://ndx:webapps@pypi.novarumcloud.com/simple/ndx-mobile-device-support/
    https://ndx:webapps@pypi.novarumcloud.com/simple/ndx-mpaf-source/
    https://ndx:webapps@pypi.novarumcloud.com/simple/ndx-organisation/
    https://ndx:webapps@pypi.novarumcloud.com/simple/ndx-portal-source/
    https://ndx:webapps@pypi.novarumcloud.com/simple/ndx-result-source/
    https://ndx:webapps@pypi.novarumcloud.com/simple/novarum-textutils/

[options.extras_require]
tests =
    factory_boy
    faker
    freezegun
    tox
    unittest-xml-reporting
mysql = 
    mysqlclient==1.3.14 # https://documents.novarumcloud.com/pages/viewpage.action?pageId=59252161
memcached = pylibmc
